Fixed share story buttons, fix attempt for mobile layout bug, updated about page

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -430,11 +430,10 @@ body{
 }
 
 #footer {
-   position:absolute;
-   bottom:0;
-   width:100%;
-   height:60px;   /* Height of the footer */
-   background:#6cf;
+   bottom: 0;
+   width: 100%;
+   height: 60px;   /* Height of the footer */
+   background: #6cf;
 }
 
 .lead {
